--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start":"node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "mongoose": "nodemon src/db/mongoose.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
