--- a/config/dev.env
+++ b/config/dev.env
@@ -1,5 +1,5 @@
 PORT=3000
 EMAIL=yan767957598
 PASSWORD=chjiimzmkqctjuqa
-MONGOOSE_API_KEY=mongodb+srv://task-app:6tORySzAlF2rW2Sh@zhixiangyan.xljb7t8.mongodb.net/?retryWrites=true&w=majority
+MONGOOSE_API_KEY=mongodb+srv://Task-app:iQRII0fHbLQzRZrK@task-manager-api.wvwaimk.mongodb.net/
 JWT_SECRET=thisissecretformyapp
