--- a/package.json
+++ b/package.json
@@ -4,14 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
-    "start":"node src/index.js",
+    "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
-=======
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "mongoose": "nodemon src/db/mongoose.js"
->>>>>>> parent of 80b12c8 (welcome email and enviroment variable)
   },
   "keywords": [],
   "author": "",
@@ -23,10 +17,12 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "sharp": "^0.32.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.22"
   }
 }
